<resources>
    <string name="app_name">FavDish</string>

    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favorite_dishes">Favorite</string>
    <string name="title_random_dish">Random Dish</string>
    <string name="title_dish_details">Dish Details</string>

    <string name="splash_screen_title">Fav Dish</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="add_dish">Add Dish</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">ingredients</string>
    <string name="lbl_cooking_time">Cooking Time in Minutes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT COOKING TIME IN MINUTES</string>

    <string name="err_msg_select_dish_image">Select dish image.</string>
    <string name="err_msg_enter_dish_title">Enter dish title.</string>
    <string name="err_msg_select_dish_type">Select dish type.</string>
    <string name="err_msg_select_dish_category">Select dish category.</string>
    <string name="err_msg_enter_dish_ingredients">Enter dish ingredients.</string>
    <string name="err_msg_select_dish_cooking_time">Select dish cooking time.</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter dish cooking instructions.</string>

    <string name="msg_added_to_favorites">Added to favorites</string>
    <string name="msg_removed_from_favorite">Removed from favorite</string>
    <string name="label_no_favorite_dishes_added_yet">No favorite dishes added yet!!!</string>

    <string name="label_no_dishes_added_yet">No dishes added yet!!!</string>
    <string name="image_contentDescription">image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lbl_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes.</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>

    <string name="action_edit_dish">EDIT DISH</string>
    <string name="action_delete_dish">DELETE DISH</string>

    <string name="title_add_dish">Add Dish</string>
    <string name="title_edit_dish">Edit Dish</string>
    <string name="lbl_update_dish">UPDATE DISH</string>

    <string name="title_delete_dish">Delete Dish</string>
    <string name="msg_delete_dish_dialog">Are you sure you want to delete %1$s.</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
</resources>